Update and rename index[1].html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DG8AB Learn</title>
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="https://media-hosting.imagekit.io//522fb3e5c3ab4ad4/favicon.ico?Expires=1835820929&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=o0hE7qpA-CTtSihiC0uqhpW6uQNidxf3godSAyznP4~WeznABlZhiQ2WmcQNg1ywyMqFcpp7fUKD097lGfi~y4ArlimVqAgQZW1AqUymtrkDRH80EPUCWU5SPYLpjUrQ7by7eCRrgyLnQQS4ViWmddEvPcxdQmqf4uqDe3aT-WDhnxz5FQAzFQiI487vXBoNIDk1iBkpnScQzkPz-734RVRj7icTk4v7xMFzfq7smiTVUvK~2-EiQymlnL8dqUXQhuQaPrQ~PymoKpitD6zcBcPGh6M88KWZSmspuu3E2FULiTlR7VIHHFMlBOteU2cE4puMQeIl-m3RbXiJ0dxzxw__" type="image/x-icon">
     <script src="https://js.puter.com/v2/"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
